# BankTransactionAnalyzer

./: .env_template  README.md  main.py  pyproject.toml
src/: utils.py  views.py
tests/: test_utils.py
