[tool.poetry]
name = "banktransactionanalyzer"
version = "0.1.0"
description = ""
authors = ["IvanPro91 <ivan-don4encko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"


[tool.black]
line-length = 119
exclude = '.git'


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"
pytest-cov = "^6.0.0"

